--- a/Health_Project/fe_health/public/index.html
+++ b/Health_Project/fe_health/public/index.html
@@ -63,7 +63,7 @@
     <!-- kakao Map-->
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0d15ddb335d6aa2a56beac912c8b0537"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=0d15ddb335d6aa2a56beac912c8b0537&libraries=services"
     ></script>
     <title>React App</title>
   </head>
